# physprep

./: .flake8  .pre-commit-config.yaml  CITATION.cff  README.md  pupillometry.ipynb  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: api.rst  conf.py  contribution.md  index.rst  installation.md  outputs.md  tutorials.rst  usage.md  workflow.md
docs/source/tutorials/: cli.rst  config.rst  prepare.rst  processing.rst  quality.rst
physprep/: __init__.py  utils.py  workflow.py
physprep/data/: data.py
physprep/data/boilerplates/: dataset_description.json  dataset_description_derivatives.json
physprep/data/preprocessing_strategy/: neuromod_ecg.json  neuromod_eda.json  neuromod_ppg.json  neuromod_rsp.json
physprep/data/processing_strategy/: neuromod_ecg.json  neuromod_eda.json  neuromod_ppg.json
physprep/data/qa_strategy/: neuromod_cardiac.json  neuromod_eda.json  neuromod_rsp.json
physprep/data/workflow_strategy/: neuromod.json
physprep/prepare/: convert.py  get_info.py  list_sub.py  match_acq_bids.py  rename.py
physprep/processing/: clean.py  convert.py  process.py  quality.py  rename.py
physprep/quality/: freq_sqi.py  qa.py  report.py  time_sqi.py
physprep/tests/: test_clean.py  test_get_info.py  test_process.py  test_processing.py  test_time_sqi.py  test_utils.py
physprep/utils/: get_info.py  list_sub.py  match_acq_bids.py
physprep/visu/: plot_signals.py
preproc/: convert.py  converted.ipynb  ecg_pipeline.ipynb  neuromod_clean.py  neuromod_process.py  neuromod_process.sh  reassign_runs_filename.ipynb  visual_check_preprocessed.ipynb
processing/: clean.py  convert.py  process.py  quality.py  rename.py
tests/: test_utils.py
tutorials/: manual_qc.ipynb  requirements.txt
utils/: CLI.py  get_info.py  get_info_videos.sh  visual_check.ipynb
visu/: dashboard.py  make_pipeline.py  plot_signals.py
