[tool.poetry]
name = "physprep"
version = "0.1.0"
description = "Physiological data preparation workflow adapted for MR settings"
authors = ["Marie-Eve Picard <marie-eve.picard.2@umontreal.ca>", "Francois Lespinasse <francois.lespinasse96@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.11"
numpy = "<=1.24"
pandas = "<=2.2.3"
phys2bids = "2.10.0"
click = "8.1.3"
scipy = "^1.9.0"
bokeh = "2.3.3"
seaborn = "0.12.0"
neurokit2 = "0.2.5"
pprintpp = "0.4.0"
bioread = "3.0.1"
ipython = "8.15.0"
pywavelets = "1.4.1"
pybids = "^0.16.0"
biosppy = "2.2.2"
matplotlib = "3.6.0"
setuptools = "<81"

[tool.poetry.dev-dependencies]
black = "22.3.0"
codespell = "1.10.0"
pre-commit = "3.3.3"
flake8 = "6.1.0"
isort = "5.9.3"
pytest = "7.4.2"
sphinx = "7.2.4"
sphinx_rtd_theme = "1.3.0"
myst-parser = "2.0.0"

[tool.poetry.scripts]
physprep = "physprep.workflow:main"

[tool.black]
line-length = 90

[tool.isort]
combine_as_imports = true
line_length = 79
profile = "black"
skip_gitignore = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
